--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,6 +133,8 @@ filterwarnings = [
   # Qiskit 1.3 deprecations
   'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
   'ignore:.*``qiskit.circuit.library.n_local.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
+  # Qiskit 2.1 deprecations
+  'ignore:.*``qiskit.circuit.library.n_local.*`` is deprecated as of Qiskit 2.1.*:DeprecationWarning:',
 ]
 
 [tool.coverage]
