--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ filterwarnings = [
   'ignore:.*``qiskit.circuit.library.n_local.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
   # Qiskit 2.1 deprecations
   'ignore:.*``qiskit.circuit.library.n_local.*`` is deprecated as of Qiskit 2.1.*:DeprecationWarning:',
+  'ignore:.*``qiskit.circuit.library.blueprintcircuit.BlueprintCircuit`` is deprecated as of Qiskit 2.1',
 ]
 
 [tool.coverage]
