--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
     "scikit-build-core>=0.11.2",
     "setuptools-scm>=8.3.1",
     "pybind11>=3.0.0",
-    "mqt.core>=3.1.0",
+    "mqt.core~=3.1.0",
 ]
 build-backend = "scikit_build_core.build"
 
@@ -47,7 +47,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "mqt.core[qiskit]>=3.1.0",
+    "mqt.core[qiskit]~=3.1.0",
     "qiskit>=1.1",
 ]
 dynamic = ["version"]
@@ -332,7 +332,7 @@ build = [
   "pybind11>=2.13.6",
   "scikit-build-core>=0.11.2",
   "setuptools-scm>=8.3.1",
-  "mqt.core>=3.1.0",
+  "mqt.core~=3.1.0",
 ]
 docs = [
   "furo>=2024.8.6",
