--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
         runs-on: [macos-13, macos-14]
         compiler: [clang]
         config: [Release]
+        include:
+          - runs-on: macos-14
+            compiler: clang
+            config: Debug
     uses: munich-quantum-toolkit/workflows/.github/workflows/reusable-cpp-tests-macos.yml@v1.14
     with:
       runs-on: ${{ matrix.runs-on }}
@@ -62,6 +66,10 @@ jobs:
         runs-on: [windows-2022, windows-11-arm]
         compiler: [msvc]
         config: [Release]
+        include:
+          - runs-on: windows-2022
+            compiler: msvc
+            config: Debug
     uses: munich-quantum-toolkit/workflows/.github/workflows/reusable-cpp-tests-windows.yml@v1.14
     with:
       runs-on: ${{ matrix.runs-on }}
@@ -177,6 +185,9 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [ubuntu-22.04, ubuntu-22.04-arm, macos-15, windows-2025]
+        exclude:
+          # see https://github.com/munich-quantum-toolkit/ddsim/issues/597
+          - runs-on: macos-15
     uses: munich-quantum-toolkit/workflows/.github/workflows/reusable-python-tests.yml@v1.14
     with:
       runs-on: ${{ matrix.runs-on }}
