--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,8 @@
 version: 2
 
 formats:
-  #  - pdf
   - htmlzip
+  # - pdf
 
 sphinx:
   configuration: docs/conf.py
@@ -31,9 +31,9 @@ build:
       - asdf plugin add uv
       - asdf install uv latest
       - asdf global uv latest
-      # Set up build time dependencies including a source distribution of mqt-core.
-      - uv sync --only-group build --only-group docs --no-binary-package mqt-core
-      # The default version of CMake on Ubuntu 24.04 is too old, so we need to install a newer version.
+      # Set up build-time dependencies
+      - uv sync --only-group build --only-group docs
+      # Install CMake because the default version on Ubuntu 24.04 is too old
       - uv pip install cmake
     build:
       html:
@@ -42,8 +42,8 @@ build:
         - uv run --frozen --no-dev --no-build-isolation-package mqt-ddsim -m sphinx -T -b dirhtml -d docs/_build/doctrees -D language=en docs docs/_build/dirhtml
         - mkdir -p $READTHEDOCS_OUTPUT/htmlzip
         - zip -r $READTHEDOCS_OUTPUT/htmlzip/html.zip docs/_build/dirhtml/*
-#      pdf:
-#        - uv run --frozen --no-dev --no-build-isolation-package mqt-ddsim -m sphinx -T -b latex -d docs/_build/doctrees -D language=en docs docs/_build/latex
-#        - cd docs/_build/latex && latexmk -pdf -f -dvi- -ps- -interaction=nonstopmode -jobname=$READTHEDOCS_PROJECT
-#        - mkdir -p $READTHEDOCS_OUTPUT/pdf
-#        - cp docs/_build/latex/$READTHEDOCS_PROJECT.pdf $READTHEDOCS_OUTPUT/pdf/$READTHEDOCS_PROJECT.pdf
+      # pdf:
+      #   - uv run --frozen --no-dev --no-build-isolation-package mqt-ddsim -m sphinx -T -b latex -d docs/_build/doctrees -D language=en docs docs/_build/latex
+      #   - cd docs/_build/latex && latexmk -pdf -f -dvi- -ps- -interaction=nonstopmode -jobname=$READTHEDOCS_PROJECT
+      #   - mkdir -p $READTHEDOCS_OUTPUT/pdf
+      #   - cp docs/_build/latex/$READTHEDOCS_PROJECT.pdf $READTHEDOCS_OUTPUT/pdf/$READTHEDOCS_PROJECT.pdf
