--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,7 +156,7 @@ jobs:
     with:
       clang-version: 20
       cmake-args: -DBUILD_MQT_DDSIM_BINDINGS=ON
-      files-changed-only: true
+      files-changed-only: false
       install-pkgs: "pybind11==3.0.0"
       setup-python: true
       cpp-linter-extra-args: "-std=c++20"
