--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
     "scikit-build-core>=0.11.2",
     "setuptools-scm>=8.3.1",
     "pybind11>=3.0.0",
-    "mqt.core>=3.2.1,<3.3",
+    "mqt.core~=3.2.1",
 ]
 build-backend = "scikit_build_core.build"
 
@@ -48,7 +48,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "mqt.core[qiskit]>=3.2.1,<3.3",
+    "mqt.core[qiskit]~=3.2.1",
     "qiskit>=1.1",
 ]
 dynamic = ["version"]
@@ -336,7 +336,7 @@ build = [
   "pybind11>=3.0.0",
   "scikit-build-core>=0.11.2",
   "setuptools-scm>=8.3.1",
-  "mqt.core>=3.2.1,<3.3",
+  "mqt.core~=3.2.1",
 ]
 docs = [
   "furo>=2024.8.6",
