--- a/pyproject.toml
+++ b/pyproject.toml
@@ -342,6 +342,7 @@ test = [
   "pytest-sugar>=1.0.0",
   "pytest-xdist>=3.7.0",
   "numpy>=2.1; python_version >= '3.13'",
+  "numpy>=2.3.2; python_version >= '3.14'",
 ]
 dev = [
   {include-group = "build"},
