--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@
 
 [build-system]
 requires = [
-    "scikit-build-core>=0.11.2",
-    "setuptools-scm>=8.3.1",
-    "pybind11>=3.0.0",
-    "mqt.core~=3.3.1",
+  "pybind11>=3.0.1",
+  "scikit-build-core>=0.11.6",
+  "setuptools-scm>=9.2.2",
+  "mqt.core~=3.3.1",
 ]
 build-backend = "scikit_build_core.build"
 
@@ -121,18 +121,16 @@ git-only = [
 write_to = "python/mqt/ddsim/_version.py"
 
 
-[tool.pytest.ini_options]
-minversion = "7.2"
+[tool.pytest]
+minversion = "9.0"
 testpaths = ["test/python"]
+strict = true
 addopts = [
   "-ra",
-  "--strict-markers",
-  "--strict-config",
   "--showlocals",
   "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
 ]
 log_level = "INFO"
-xfail_strict = true
 filterwarnings = [
   "error",
   'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
@@ -143,6 +141,7 @@ filterwarnings = [
   'ignore:.*``qiskit.circuit.library.n_local.*`` is deprecated as of Qiskit 2.1.*:DeprecationWarning:',
   'ignore:.*``qiskit.circuit.library.blueprintcircuit.BlueprintCircuit`` is deprecated as of Qiskit 2.1',
 ]
+
 
 [tool.coverage]
 run.source = ["mqt.ddsim"]
@@ -165,11 +164,18 @@ strict = true
 explicit_package_bases = true
 warn_unreachable = true
 
+
 [tool.ruff]
 line-length = 120
 namespace-packages = ["mqt"]
 preview = true
+fix = true
 unsafe-fixes = true
+show-fixes = true
+src = ["python"]
+
+[tool.ruff.format]
+docstring-code-format = true
 
 [tool.ruff.lint]
 extend-select = [
@@ -177,7 +183,7 @@ extend-select = [
     "ANN",         # flake8-annotations
     "ARG",         # flake8-unused-arguments
     "ASYNC",       # flake8-async
-    "B",  "B904",  # flake8-bugbear
+    "B",           # flake8-bugbear
     "C4",          # flake8-comprehensions
     "D",           # pydocstyle
     "EM",          # flake8-errmsg
@@ -214,10 +220,8 @@ extend-select = [
     "YTT",         # flake8-2020
 ]
 ignore = [
-    "ISC001",  # Conflicts with formatter
     "PLR09",   # Too many <...>
     "PLR2004", # Magic value used in comparison
-    "PLC0415", # Import should be at top of file
     "S101",    # Use of assert detected
     "S404",    # `subprocess` module is possibly insecure
 ]
@@ -309,43 +313,43 @@ environment = { CMAKE_ARGS = "-T ClangCL" }
 required-version = ">=0.5.20"
 reinstall-package = ["mqt.ddsim"]
 
-
 [tool.uv.sources]
 mqt-ddsim = { workspace = true }
 
+
 [dependency-groups]
 build = [
-  "pybind11>=3.0.0",
-  "scikit-build-core>=0.11.2",
-  "setuptools-scm>=8.3.1",
+  "pybind11>=3.0.1",
+  "scikit-build-core>=0.11.6",
+  "setuptools-scm>=9.2.2",
   "mqt.core~=3.3.1",
 ]
 docs = [
-  "furo>=2024.8.6",
-  "myst-nb>=1.2.0",
-  "qiskit[visualization]>=1.0.0",
-  "setuptools-scm>=8.3.1",
+  "breathe>=4.36.0",
+  "furo>=2025.09.25",
+  "graphviz>=0.21.0",
+  "myst-nb>=1.3.0",
+  "setuptools-scm>=9.2.2",
+  "sphinx>=8.1.3",
+  "sphinx>=8.2.3; python_version >= '3.11'",
   "sphinx-autoapi>=3.6.0",
   "sphinx-copybutton>=0.5.2",
   "sphinx-design>=0.6.1",
-  "sphinxcontrib-bibtex>=2.6.3",
+  "sphinxcontrib-bibtex>=2.6.5",
   "sphinxcontrib-svg2pdfconverter>=1.3.0",
-  "sphinxext-opengraph>=0.10.0",
-  "breathe>=4.36.0",
-  "graphviz>=0.20.3",
-  "sphinx>=8.1.3",
-  "sphinx>=8.2.3; python_version >= '3.11'",
+  "sphinxext-opengraph>=0.13.0",
+  "qiskit[visualization]>=1.0.0",
 ]
 test = [
-  "pytest>=8.3.5",
-  "pytest-cov>=6.1.1",
-  "pytest-sugar>=1.0.0",
-  "pytest-xdist>=3.7.0",
+  "pytest>=9.0.1",
+  "pytest-cov>=7.0.0",
+  "pytest-sugar>=1.1.1",
+  "pytest-xdist>=3.8.0",
   "numpy>=2.1; python_version >= '3.13'",
   "numpy>=2.3.2; python_version >= '3.14'",
 ]
 dev = [
   {include-group = "build"},
-  {include-group = "docs"},
   {include-group = "test"},
+  "nox>=2025.11.12",
 ]
