--- a/pyproject.toml
+++ b/pyproject.toml
@@ -267,7 +267,10 @@ optin = "optin"
 
 
 [tool.repo-review]
-ignore = ["GH200"]
+ignore = [
+  "GH200", # We use Renovate instead of Dependabot
+  "PC160", # We use a mirror of crate-ci/typos
+]
 
 
 [tool.cibuildwheel]
