--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,9 @@ wheel.install-dir = "mqt/ddsim"
 # Explicitly set the package directory
 wheel.packages = ["python/mqt"]
 
+# Enable stable ABI builds for CPython 3.12+
+wheel.py-api = "cp312"
+
 # Set required Ninja version
 ninja.version = ">=1.10"
 
