--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ ci:
   autoupdate_commit_msg: "⬆️🪝 update pre-commit hooks"
   autofix_commit_msg: "🎨 pre-commit fixes"
   autoupdate_schedule: quarterly
-  skip: [mypy]
+  skip: [ty-check]
 
 repos:
   # Standard hooks
@@ -107,17 +107,16 @@ repos:
       - id: prettier
         types_or: [yaml, markdown, html, css, scss, javascript, json]
 
-  # Check static types with mypy
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.19.1
+  ## Static type checking using ty
+  - repo: local
     hooks:
-      - id: mypy
-        files: ^(python/mqt|test/python|noxfile.py)
-        additional_dependencies:
-          - nox
-          - numpy
-          - pytest
-          - mqt.core>=3
+      - id: ty-check
+        name: ty check
+        entry: uvx python -c "import subprocess; import sys; r = subprocess.run(['uv', 'sync', '--no-install-project', '--inexact']); sys.exit(r.returncode or subprocess.run(['uv', 'run', '--no-sync', 'ty', 'check']).returncode)"
+        language: unsupported
+        require_serial: true
+        types_or: [python, pyi, jupyter]
+        exclude: ^(docs/)
 
   # Check for spelling
   - repo: https://github.com/adhtruong/mirrors-typos
