--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@
 
 [build-system]
 requires = [
-  "nanobind>=2.10.2",
+  "nanobind~=2.10.2",
   "scikit-build-core>=0.11.6",
   "setuptools-scm>=9.2.2",
   "mqt.core~=3.4.0",
@@ -336,7 +336,7 @@ mqt-ddsim = { workspace = true }
 
 [dependency-groups]
 build = [
-  "nanobind>=2.10.2",
+  "nanobind~=2.10.2",
   "scikit-build-core>=0.11.6",
   "setuptools-scm>=9.2.2",
   "mqt.core~=3.4.0",
